--- a/ILT-5/deploy-tf-serving/test.ipynb
+++ b/ILT-5/deploy-tf-serving/test.ipynb
@@ -89,6 +89,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make prediction request"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -108,9 +115,6 @@
     "    }\n",
     ")\n",
     "\n",
-    "# print(input_json)\n",
-    "\n",
-    "# endpoint = \"http://localhost:8080/v1/models/fashion-mnist:predict\"\n",
     "endpoint = \"http://127.0.0.1:8080/v1/models/fashion-mnist:predict\"\n",
     "\n",
     "response = requests.post(endpoint, data=json_data)\n",
