--- a/ILT-5/deploy-tf-serving/test.ipynb
+++ b/ILT-5/deploy-tf-serving/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -57,17 +57,17 @@
    ],
    "source": [
     "# Grab an image from the test dataset.\n",
-    "img = test_images[2]\n",
+    "image = test_images[2]\n",
     "\n",
     "\n",
-    "plt.imshow(img)\n",
+    "plt.imshow(image)\n",
     "plt.show()\n",
     "print(\"Image label: \" + class_names[test_labels[2]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -80,12 +80,12 @@
     }
    ],
    "source": [
-    "print(img.shape)\n",
+    "print(image.shape)\n",
     "\n",
     "# Add the image to a batch where it's the only member.\n",
-    "img = (np.expand_dims(img, 0))\n",
+    "image = (np.expand_dims(image, 0))\n",
     "\n",
-    "print(img.shape)\n"
+    "print(image.shape)\n"
    ]
   },
   {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -111,14 +111,14 @@
    "source": [
     "json_data = json.dumps(\n",
     "    {\n",
-    "        \"instances\": img.tolist()\n",
+    "        \"instances\": image.tolist()\n",
     "    }\n",
     ")\n",
     "\n",
-    "endpoint = \"http://127.0.0.1:8080/v1/models/fashion-mnist:predict\"\n",
+    "endpoint = \"http://localhost:8080/v1/models/fashion-mnist:predict\"\n",
     "\n",
     "response = requests.post(endpoint, data=json_data)\n",
-    "prediction = tf.argmax(response.json()['predictions'][0]).numpy()\n",
+    "prediction = tf.argmax(response.json()[\"predictions\"][0]).numpy()\n",
     "print(class_names[prediction])"
    ]
   },
